# file-filter-action

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  file_filter_action.py  pyproject.toml  test_file_filter_action.py  tox.ini
.github/workflows/: example.yml
